added state to login and base app components to allow some basic flow

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/c86a05f998.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css">
-  <title>Reference Check</title>
+  <title>NausicaaIQ</title>
 </head>
 
 <body>
